# m3u8-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs  lib_tests.rs  validation.rs
src/m3u8/: mod.rs  parser.rs  tags.rs  validation.rs
src/m3u8/playlist/: builder.rs  mod.rs
src/m3u8/tests/: lib_tests.rs
src/m3u8/tests/test_data/: out.m3u8
