[package]
name = "m3u8-parser"
version = "0.1.0"
authors = ["Amin Jamal <aminjamal10@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust crate for parsing and creating M3U8 files (HLS)."
homepage = "https://github.com/includeamin/m3u8-parser"
repository = "https://github.com/includeamin/m3u8-parser"
readme = "README.md"

[dependencies]
